14-Nginx-Ingress-Controller-MetalLB-K0S/pod-service-ingress.yaml
# Script realizado con Amor por:
# Alejandro Martinez Capilla
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: web
  name: web
spec:
  containers:
  - image: httpd:latest
    name: web
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: web
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: nginx
  rules:
  - host: "web.ticveintitres.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
